2013-02-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (OMP_FMT_BOOL_ATTRIB): Add the attribute when it is 0 too,
	because the OMP default is sometimes 1.

2013-01-29  Werner Koch  <wk@gnupg.org>

	* nasl/nasl.c: Include libssh and nasl_signature.h.
	(main): Display library versions if --debug-tls is given.

2013-01-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_init): Downgrade log level for
	debug message.

2013-01-24  Werner Koch  <wk@gnupg.org>

	Change to allow printing of useful diagnostics even if stderr is
	redirected to the bit bucket.

	* misc/network.c: Include openvas_logging.h.  Replace all fprintf
	to stderr calls by calls to log_legacy_write.
	(openvas_get_socket_from_connection): Repalce fflush by
	log_legacy_fflush.
	(verify_peer_certificate): Add messages for not yet valid and
	expired certifciates, print invalid status last, and pretty print
	those messages.

	* misc/openvas_logging.c: Include stdarg.h.
	(legacy_log_handler): New variable.
	(setup_legacy_log_handler, log_legacy_write, log_legacy_fflush): New.
	* misc/openvas_logging.h: Add prototypes for new functions.

	* misc/openvas_logging.c: Include gnutls.h.
	(log_func_for_gnutls): New.
	(setup_log_handlers): Enable GNUTLS logging if the evnvar
	OPENVAS_GNUTLS_DEBUG is set.

2013-01-24  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_write_config): Correct group for
	allow-plaintext entry.

2013-01-21  Chandrashekhar B <bchandra@secpod.com>
	* nasl/nasl_packet_forgery_v6.c (forge_udp_v6_packet): IPv6
	packet length was set to 40 more than the size in UDP forging.
	(set_udp_v6_elements): IPv6 packet length was set to 40 more
	than the size in UDP forging.

2013-01-21  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_auth.c (ldap_auth_bind): Before giving up if
	StartTLS failed, try to establish ldaps connection.

2013-01-21  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
