@@ -430,6 +430,18 @@ static init_func libfuncs[] = {
    {"hive", "key", "val_name", "wmi_handle", NULL}},
   {"wmi_reg_get_qword_val", nasl_wmi_reg_get_qword_val, 0,
    {"hive", "key", "val_name", "wmi_handle", NULL}},
+  {"wmi_reg_set_dword_val", nasl_wmi_reg_set_dword_val, 0,
+   {"hive", "key", "val", "val_name", "wmi_handle"}},
+  {"wmi_reg_set_qword_val", nasl_wmi_reg_set_qword_val, 0,
+   {"hive", "key", "val", "val_name", "wmi_handle"}},
+  {"wmi_reg_set_ex_string_val", nasl_wmi_reg_set_ex_string_val, 0,
+   {"hive", "key", "val", "val_name", "wmi_handle"}},
+  {"wmi_reg_set_string_val", nasl_wmi_reg_set_string_val, 0,
+   {"hive", "key", "val", "val_name", "wmi_handle"}},
+  {"wmi_reg_create_key", nasl_wmi_reg_create_key, 0,
+   {"hive", "key", "wmi_handle"}},
+  {"wmi_reg_delete_key", nasl_wmi_reg_delete_key, 0,
+   {"hive", "key", "wmi_handle"}},
 
   {"smb_versioninfo", nasl_smb_versioninfo, 0, {NULL}},
   {"smb_connect", nasl_smb_connect, 0,
